# mpl

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  LICENSE.md  README.md  conanfile.py
doc/standardese/: doc_algorithm__all.html  doc_algorithm__any.html  doc_algorithm__count_if.html  doc_algorithm__filter.html  doc_algorithm__find_if.html  doc_algorithm__flatten.html  doc_algorithm__fold_left.html  doc_algorithm__fold_right.html  doc_algorithm__make_sequence.html  doc_algorithm__partition.html  doc_algorithm__product.html  doc_algorithm__remove_adjacent.html  doc_algorithm__remove_if.html  doc_algorithm__replace_if.html  doc_algorithm__reverse.html  doc_algorithm__rotate.html  doc_algorithm__sort.html  doc_algorithm__split_if.html  doc_algorithm__stable_sort.html  doc_algorithm__transform.html  doc_algorithm__zip_with.html  doc_compatability__compatability.html  doc_compatability__dependent_call.html  doc_functional__bind.html  doc_functional__call.html  doc_functional__compose.html  doc_functional__flow.html  doc_functional__fork.html  doc_functional__identity.html  doc_functions__arithmetic__decrement.html  doc_functions__arithmetic__divide.html  doc_functions__arithmetic__increment.html  doc_functions__arithmetic__invert.html  doc_functions__arithmetic__max.html  doc_functions__arithmetic__min.html  doc_functions__arithmetic__minus.html  doc_functions__arithmetic__modulo.html  doc_functions__arithmetic__negate.html  doc_functions__arithmetic__plus.html  doc_functions__arithmetic__times.html  (+40 more)
src/kvasir/mpl/: mpl.hpp
src/kvasir/mpl/algorithm/: all.hpp  any.hpp  combinations.hpp  contains.hpp  count_if.hpp  distinct.hpp  erase.hpp  extreme.hpp  filter.hpp  find_if.hpp  flatten.hpp  fold_left.hpp  fold_right.hpp  group.hpp  index_if.hpp  insert.hpp  lookup.hpp  make_sequence.hpp  none.hpp  partition.hpp  product.hpp  remove_adjacent.hpp  remove_if.hpp  replace_if.hpp  reverse.hpp  rotate.hpp  sort.hpp  split_if.hpp  stable_sort.hpp  transform.hpp  zip_with.hpp
src/kvasir/mpl/compatability/: compatability.hpp  dependant_call.hpp  dependent_call.hpp
src/kvasir/mpl/functional/: bind.hpp  call.hpp  compose.hpp  flow.hpp  fork.hpp  identity.hpp
src/kvasir/mpl/functions/arithmetic/: complement.hpp  decrement.hpp  divide.hpp  increment.hpp  invert.hpp  max.hpp  min.hpp  minus.hpp  modulo.hpp  negate.hpp  plus.hpp  times.hpp
src/kvasir/mpl/functions/bitwise/: bitwise_and.hpp  bitwise_complement.hpp  bitwise_not.hpp  bitwise_or.hpp  bitwise_shl.hpp  bitwise_shr.hpp  bitwise_xor.hpp
src/kvasir/mpl/functions/comparison/: equal.hpp  greater_than.hpp  greater_than_or_equal.hpp  less_than.hpp  less_than_or_equal.hpp  not_equal.hpp
src/kvasir/mpl/functions/logical/: logical_and.hpp  logical_not.hpp  logical_or.hpp
src/kvasir/mpl/sequence/: append.hpp  at.hpp  create.hpp  drop.hpp  erase.hpp  front.hpp  insert.hpp  is_list.hpp  join.hpp  lookup.hpp  make_sequence.hpp  pop_front.hpp  push_back.hpp  push_front.hpp  size.hpp  take.hpp
src/kvasir/mpl/types/: arity.hpp  bool.hpp  int.hpp  integral_constant.hpp  list.hpp  nothing.hpp  traits.hpp  type.hpp
src/kvasir/mpl/utility/: always.hpp  conditional.hpp  identity.hpp  invert.hpp  is_instance.hpp  is_same.hpp  same_as.hpp
src/mpl/: mpl.hpp
src/mpl/algorithm/: all.hpp  any.hpp  contains.hpp  count_if.hpp  filter.hpp  find_if.hpp  fold_left.hpp  fold_right.hpp  partition.hpp  remove_if.hpp  reverse.hpp  sort.hpp  transform.hpp
src/mpl/functional/: bind.hpp  compose.hpp  identity.hpp
src/mpl/sequence/: at.hpp  join.hpp  pop_front.hpp  push_back.hpp  push_front.hpp  size.hpp
src/mpl/simple/: invert.hpp
src/mpl/types/: integral_constant.hpp  list.hpp  nothing.hpp
src/mpl/utility/: invert.hpp
test/: test.cpp  testing.hpp
test/algorithm/: all.cpp  all.hpp  any.cpp  any.hpp  combinations.hpp  contains.hpp  count_if.cpp  count_if.hpp  distinct.hpp  extreme.hpp  filter.cpp  filter.hpp  find_if.cpp  find_if.hpp  flatten.cpp  flatten.hpp  fold_left.cpp  fold_left.hpp  fold_right.cpp  fold_right.hpp  group.hpp  index_if.hpp  lookup.cpp  lookup.hpp  make_sequence.cpp  make_sequence.hpp  none.hpp  partition.cpp  partition.hpp  product.cpp  product.hpp  remove_adjacent.cpp  remove_adjacent.hpp  remove_if.cpp  remove_if.hpp  reverse.cpp  reverse.hpp  rotate.hpp  sort.cpp  sort.hpp  (+8 more)
test/functional/: bind.hpp  call.hpp  compose.hpp  flow.hpp  fork.hpp  identity.hpp
test/functions/arithmetic/: decrement.hpp  divide.hpp  increment.hpp  invert.hpp  max.hpp  min.hpp  minus.hpp  modulo.hpp  negate.hpp  plus.hpp  times.hpp
test/functions/bitwise/: bitwise_and.hpp  bitwise_complement.hpp  bitwise_or.hpp  bitwise_xor.hpp
test/functions/comparison/: equal.hpp  greater_than.hpp  greater_than_or_equal.hpp  less_than.hpp  less_than_or_equal.hpp  not_equal.hpp
test/functions/logical/: logical_and.hpp  logical_not.hpp  logical_or.hpp
test/sequence/: append.hpp  at.hpp  create.hpp  is_list.hpp  join.hpp  lookup.cpp  lookup.hpp  make_sequence.hpp  pop_front.hpp  push_back.hpp  push_front.hpp  size.cpp  size.hpp
test/simple/: invert.hpp
test/types/: bool.hpp  int.hpp  integral_constant.hpp  list.hpp  nothing.hpp
test/utility/: always.hpp  conditional.hpp  identity.hpp  invert.hpp  is_instance.hpp
test_package/: CMakeLists.txt  conanfile.py  example.cpp
